--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "pestphp/pest-plugin-laravel": "^2.0"
     },
     "autoload": {
+        "files" : [
+            "app/Helpers/helper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
