--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://EcoSavor.com",
+        "APP_KEY": "base64:93CFb0m+n4TejdgXrAdP1VoxTQyiFAgDk+roLNd61+Q=",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
