--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,22 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "resources/"
+        },
+             
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
+    ],
+    
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://EcoSavor.com",
+        "APP_URL": "https://eco-savor.vercel.app",
         "APP_KEY": "base64:93CFb0m+n4TejdgXrAdP1VoxTQyiFAgDk+roLNd61+Q=",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
@@ -24,5 +32,5 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
-    }
+    }   
 }
