--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,16 @@
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        },
+        {
+            "src": "/css/(.+)",
+            "dest": "public/css/"
+        }
+    ],
     
     "env": {
         "APP_ENV": "production",
