--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:93CFb0m+n4TejdgXrAdP1VoxTQyiFAgDk+roLNd61+Q=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
